--- a/composer.json
+++ b/composer.json
@@ -101,6 +101,7 @@
         }
     },
     "require-dev": {
+        "codeception/module-symfony": "^3.1",
         "friendsofphp/php-cs-fixer": "^3.34",
         "phpunit/phpunit": "^9.5",
         "symfony/browser-kit": "6.3.*",
