--- a/composer.json
+++ b/composer.json
@@ -101,6 +101,8 @@
         }
     },
     "require-dev": {
+        "codeception/codeception": "^5.0",
+        "codeception/module-asserts": "^3.0",
         "codeception/module-symfony": "^3.1",
         "friendsofphp/php-cs-fixer": "^3.34",
         "phpunit/phpunit": "^9.5",
