--- a/composer.json
+++ b/composer.json
@@ -89,6 +89,14 @@
         ],
         "fix:cs": [
             "php vendor/bin/php-cs-fixer fix"
+        ],
+        "test:codeception": [
+            "codecept clean",
+            "php vendor/bin/codecept run"
+        ],
+        "test": [
+            "composer test:cs",
+            "composer test:codeception"
         ]
     },
     "conflict": {
@@ -118,6 +126,8 @@
     "scripts-descriptions": {
         "test:cs": "Run cs-fixer tests",
         "fix:cs": "Run cs-fixer fixes",
-        "start": "Start the server"
+        "start": "Start the server",
+        "test:codeception": "Run codeception tests",
+        "test": "Run all tests"
     }
 }
