ajout de foundry

--- a/composer.json
+++ b/composer.json
@@ -122,7 +122,8 @@
         "symfony/maker-bundle": "^1.0",
         "symfony/phpunit-bridge": "^6.3",
         "symfony/stopwatch": "6.3.*",
-        "symfony/web-profiler-bundle": "6.3.*"
+        "symfony/web-profiler-bundle": "6.3.*",
+        "zenstruck/foundry": "^1.36"
     },
     "scripts-descriptions": {
         "test:cs": "Run cs-fixer tests",
