--- a/tests/Controller.suite.yml
+++ b/tests/Controller.suite.yml
@@ -7,3 +7,8 @@ modules:
               app_path: 'src'
               environment: 'test'
         - Asserts:
+        - Doctrine2:
+            depends: Symfony # Tells Doctrine to fetch the Entity Manager through Symfony
+            cleanup: true # All doctrine queries will be wrapped in a transaction, which will be rolled back at the end of each test
+        - \App\Tests\Support\Helper\EntityManagerReset:
+              depends: Symfony
